--- a/site-sass/components/navigation.scss
+++ b/site-sass/components/navigation.scss
@@ -146,7 +146,7 @@
 		position: absolute;
 		padding-top: 20px;
 		margin-left: -110px;
-		z-index: 150;
+		z-index: $zindex-medium-high;
 		opacity: 0;
 		top: 45px;
 		left: -9999px;
