--- a/css/global.css
+++ b/css/global.css
@@ -62,6 +62,7 @@
 .hide {
   display: none; }
 
+/* === Flexbox Center === */
 /** -- Animation.--*!/*/
 /*--------------------------------------------------------------
 # Images
@@ -4357,6 +4358,12 @@ readers do not read off random characters that represent icons */
 .home-hero-banner__detail .comment-form input[type="submit"], .comment-form .home-hero-banner__detail input[type="submit"],
 .home-hero-banner__detail .comment-form input[type="button"], .comment-form .home-hero-banner__detail input[type="button"] {
   margin: 30px 0 0; }
+  @media (max-width: 46.24em) {
+    .home-hero-banner__detail .read-more, .home-hero-banner__detail .contact-form input[type="submit"], .contact-form .home-hero-banner__detail input[type="submit"],
+    .home-hero-banner__detail .contact-form input[type="button"], .contact-form .home-hero-banner__detail input[type="button"],
+    .home-hero-banner__detail .comment-form input[type="submit"], .comment-form .home-hero-banner__detail input[type="submit"],
+    .home-hero-banner__detail .comment-form input[type="button"], .comment-form .home-hero-banner__detail input[type="button"] {
+      padding: 10px 15px; } }
 
 .home-hero-banner__detail .read-more svg, .home-hero-banner__detail .contact-form input[type="submit"] svg, .contact-form .home-hero-banner__detail input[type="submit"] svg, .home-hero-banner__detail .contact-form input[type="button"] svg, .contact-form .home-hero-banner__detail input[type="button"] svg, .home-hero-banner__detail .comment-form input[type="submit"] svg, .comment-form .home-hero-banner__detail input[type="submit"] svg, .home-hero-banner__detail .comment-form input[type="button"] svg, .comment-form .home-hero-banner__detail input[type="button"] svg {
   margin-left: 15px;
@@ -4462,7 +4469,7 @@ readers do not read off random characters that represent icons */
     position: absolute;
     padding-top: 20px;
     margin-left: -110px;
-    z-index: 150;
+    z-index: 1030;
     opacity: 0;
     top: 45px;
     left: -9999px;
@@ -11325,13 +11332,24 @@ blockquote::before, blockquote::after {
 
 .home-hero-banner {
   margin-bottom: 20px;
-  height: 25vh; }
+  /*height: 25vh;*/ }
   @media (max-width: 46.24em) {
     .home-hero-banner {
-      height: 200px; } }
+      height: 25vh; } }
   @media (min-width: 46.25em) {
     .home-hero-banner {
-      height: 50vh; } }
+      padding-top: 40px;
+      /*height: 50vh;*/ } }
+
+.home-hero-banner .post-meta-likes {
+  display: none; }
+  @media (min-width: 46.25em) {
+    .home-hero-banner .post-meta-likes {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex; } }
 
 .post-slider,
 .post-slider *:not(.slick-arrow) {
@@ -12059,6 +12077,84 @@ p:not(:last-child) {
   -webkit-justify-content: center;
   -moz-justify-content: center;
   justify-content: center; }
+
+.empty-image-container {
+  background-image: -moz-linear-gradient(50% 100% 90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  background-image: -webkit-linear-gradient(90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0, #002147), color-stop(0.4273, #012349), color-stop(0.6778, #062952), color-stop(0.882, #0d3260), color-stop(1, #143b6c));
+  background-image: -o-linear-gradient(90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  background-image: -ms-linear-gradient(90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#002147', endColorstr='#143B6C' ,GradientType=0)";
+  background-image: linear-gradient(0deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#143B6C',endColorstr='#002147' , GradientType=0);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
+  min-height: 50vh; }
+
+@media (min-width: 46.25em) {
+  .home-hero-banner .empty-image-container {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    -webkit-justify-content: flex-end;
+    -moz-justify-content: flex-end;
+    justify-content: flex-end;
+    padding-right: 40px; } }
+
+.home-hero-banner .empty-image-container svg {
+  display: none; }
+  @media (min-width: 46.25em) {
+    .home-hero-banner .empty-image-container svg {
+      display: block; } }
+
+.post-article-container .empty-image-container {
+  background-image: -moz-linear-gradient(50% 100% 90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  background-image: -webkit-linear-gradient(90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  background-image: -webkit-gradient(linear, 50% 100%, 50% 0%, color-stop(0, #002147), color-stop(0.4273, #012349), color-stop(0.6778, #062952), color-stop(0.882, #0d3260), color-stop(1, #143b6c));
+  background-image: -o-linear-gradient(90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  background-image: -ms-linear-gradient(90deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#002147', endColorstr='#143B6C' ,GradientType=0)";
+  background-image: linear-gradient(0deg, #002147 0%, #012349 42.73%, #062952 67.78%, #0d3260 88.2%, #143b6c 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#143B6C',endColorstr='#002147' , GradientType=0);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
+  min-height: 250px; }
+
+.post-article-container .empty-image-container svg {
+  color: white;
+  width: 35%; }
+
+.empty-image-container svg {
+  color: white;
+  width: 35%; }
+  @media (min-width: 46.25em) {
+    .empty-image-container svg {
+      width: 15%; } }
 
 /*--------------------------------------------------------------
 # Site Header
