--- a/site-sass/base/vars.colours.scss
+++ b/site-sass/base/vars.colours.scss
@@ -18,13 +18,13 @@ $uni-teal: 				rgba(4, 126, 136, 1)!default;
 $uni-teal-hover: 				rgba(4, 126, 136, 0.3)!default;
 
 @mixin uni-gradient {
-	background : -moz-linear-gradient(50% 100% 90deg,rgba(0, 33, 71, 1) 0%,rgba(1, 35, 73, 1) 42.73%,rgba(6, 41, 82, 1) 67.78%,rgba(13, 50, 96, 1) 88.2%,rgba(20, 59, 108, 1) 100%);
-	background : -webkit-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
-	background : -webkit-gradient(linear,50% 100% ,50% 0% ,color-stop(0,rgba(0, 33, 71, 1) ),color-stop(0.4273,rgba(1, 35, 73, 1) ),color-stop(0.6778,rgba(6, 41, 82, 1) ),color-stop(0.882,rgba(13, 50, 96, 1) ),color-stop(1,rgba(20, 59, 108, 1) ));
-	background : -o-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
-	background : -ms-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
+	background-image : -moz-linear-gradient(50% 100% 90deg,rgba(0, 33, 71, 1) 0%,rgba(1, 35, 73, 1) 42.73%,rgba(6, 41, 82, 1) 67.78%,rgba(13, 50, 96, 1) 88.2%,rgba(20, 59, 108, 1) 100%);
+	background-image : -webkit-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
+	background-image : -webkit-gradient(linear,50% 100% ,50% 0% ,color-stop(0,rgba(0, 33, 71, 1) ),color-stop(0.4273,rgba(1, 35, 73, 1) ),color-stop(0.6778,rgba(6, 41, 82, 1) ),color-stop(0.882,rgba(13, 50, 96, 1) ),color-stop(1,rgba(20, 59, 108, 1) ));
+	background-image : -o-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
+	background-image : -ms-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#002147', endColorstr='#143B6C' ,GradientType=0)";
-	background : linear-gradient(0deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
+	background-image : linear-gradient(0deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#143B6C',endColorstr='#002147' , GradientType=0);
 }
 
