--- a/site-sass/components/slick.scss
+++ b/site-sass/components/slick.scss
@@ -47,7 +47,7 @@
     margin-left: auto;
     margin-right: auto;
 	height: 100%;
-	
+
     &:before,
     &:after {
         content: "";
@@ -70,6 +70,7 @@
 	background-size: cover;
 	background-position: center;
 	text-align: center;
+  list-style: none;
     [dir="rtl"] & {
         float: right;
     }
@@ -79,8 +80,6 @@
     &.slick-loading img {
         display: none;
     }
-
-    display: none;
 
     &.dragging img {
         pointer-events: none;
@@ -129,12 +128,12 @@
 		top: auto;
 		bottom: $nav-horizontal-gap ;
 	}
-	
+
 	.slick-prev.slick-arrow {
 		right: $nav-horizontal-gap *3;
 		left: auto;
 	}
-	
+
 	.slick-next.slick-arrow {
 		right: $nav-horizontal-gap;
 		left: auto;
@@ -147,7 +146,7 @@
 	 left: $nav-horizontal-gap;
 	 @include fa-icon;
 	  @extend .fas;
-	
+
 	  &:before {
 	    content: fa-content($fa-var-angle-left);
 	  }
@@ -157,7 +156,7 @@
 	 right: $nav-horizontal-gap;
 	 @include fa-icon;
 	  @extend .fas;
-	
+
 	  &:before {
 	    content: fa-content($fa-var-angle-right);
 	  }
