--- a/css/global.css
+++ b/css/global.css
@@ -7921,7 +7921,7 @@ readers do not read off random characters that represent icons */
   background-size: cover;
   background-position: center;
   text-align: center;
-  display: none; }
+  list-style: none; }
   [dir="rtl"] .slick-slide {
     float: right; }
   .slick-slide img {
@@ -11313,6 +11313,11 @@ blockquote::before, blockquote::after {
 .post-entry-meta {
   background-color: #f7f7f7; }
 
+.format-gallery .blog-body, .format-gallery .post-entry-meta {
+  background-color: #f7f7f7;
+  display: inline-block;
+  width: 100%; }
+
 .visual-layout .post-entry-meta {
   background-color: transparent; }
 
@@ -11353,8 +11358,8 @@ blockquote::before, blockquote::after {
 
 .post-slider,
 .post-slider *:not(.slick-arrow) {
-  height: 100%;
-  width: 100%;
+  /*height: 100%;
+	width: 100%;*/
   object-fit: cover; }
 
 .home-hero-banner__transparent-block {
@@ -11403,7 +11408,8 @@ blockquote::before, blockquote::after {
 .home-hero-banner__detail,
 .home-hero-banner__detail a {
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+  text-align: left; }
 
 .home-hero-banner__detail li.date,
 .home-hero-banner__detail li.likes {
@@ -12111,7 +12117,12 @@ p:not(:last-child) {
     -webkit-justify-content: flex-end;
     -moz-justify-content: flex-end;
     justify-content: flex-end;
-    padding-right: 40px; } }
+    padding-right: 40px;
+    min-height: 370px; } }
+
+@media (min-width: 46.25em) {
+  .home-hero-banner .empty-image-container {
+    min-height: 570px; } }
 
 .home-hero-banner .empty-image-container svg {
   display: none; }
@@ -12187,6 +12198,7 @@ p:not(:last-child) {
     text-decoration: none; }
 
 .site-branding__hero-wording {
+  justify-content: center;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-flex;
@@ -12333,3 +12345,47 @@ p:not(:last-child) {
     -moz-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column; } }
+
+main {
+  background-color: #f7f7f7; }
+
+.authors-list {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1200px; }
+  .authors-list * {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+  .authors-list li {
+    list-style: none;
+    margin-right: 40px;
+    margin-top: 40px; }
+  .authors-list li:nth-child(3n) {
+    margin-right: 0px; }
+  .authors-list .author-role {
+    max-width: 380px;
+    padding: 20px;
+    display: inline-block;
+    background-color: white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    height: 100%; }
+    .authors-list .author-role .avatar {
+      position: initial;
+      float: left;
+      width: 50px; }
+    .authors-list .author-role .text {
+      display: inline-block;
+      max-width: 280px;
+      float: left;
+      padding-left: 20px;
+      color: #aaaaaa; }
+      .authors-list .author-role .text .name {
+        display: inline-block;
+        margin-bottom: 25px;
+        color: #404040; }
+      .authors-list .author-role .text a {
+        color: #404040;
+        text-decoration: none; }
+      .authors-list .author-role .text a:hover {
+        text-decoration: underline; }
