--- a/site-sass/site-specific/site.post.scss
+++ b/site-sass/site-specific/site.post.scss
@@ -28,6 +28,7 @@ blockquote::before, blockquote::after {
 	.blog-body, .post-entry-meta {
 		background-color: $off-white-footer;
 		display: inline-block;
+		width: 100%;
 	}
 }
 
@@ -89,8 +90,8 @@ blockquote::before, blockquote::after {
 
 .post-slider,
 .post-slider *:not(.slick-arrow) {
-	height: 100%;
-	width: 100%;
+	/*height: 100%;
+	width: 100%;*/
 	object-fit: cover;
 }
 
@@ -140,6 +141,7 @@ blockquote::before, blockquote::after {
 .home-hero-banner__detail a {
 	color: white;
 	text-decoration: none;
+	text-align: left;
 }
 
 
