--- a/site-sass/site-specific/site.post.scss
+++ b/site-sass/site-specific/site.post.scss
@@ -781,6 +781,11 @@ blockquote::before, blockquote::after {
 	margin-top: 65px;
 }
 
+.comments-title,
+.comment-reply-title  {
+	margin-top: 0;
+}
+
 
 .post-content h1,
 .post-content h2 {
