--- a/site-sass/site-specific/site.authors.scss
+++ b/site-sass/site-specific/site.authors.scss
@@ -1,64 +1,101 @@
-main {
-  background-color: $off-white-footer;
+
+.author-columns-wrap {
+	@include flexbox;
+	@include flex-wrap(wrap);
+	@include justify-content(center);
+	margin-left: -$desktop-side-pad/2;
+	margin-right: -$desktop-side-pad/2;
+	
 }
 
-.authors-list {
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 1200px;
+.author-column {
+	width: 100%;
+	padding: 0 $desktop-side-pad/2 $desktop-side-pad;
+	
+	@include mq(tablet) {
+		@include flex-basis(auto);
+			 width: percentage(1/2);
+	
+	}
+	
+	@include mq(desktop) {
+			width: percentage(1/3);
+		
+		}
 
-  * {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  }
+}
 
-  li {
-    list-style: none;
-    margin-right: 40px;
-    margin-top: 40px;
-  }
 
-  li:nth-child(3n) {
-    margin-right: 0px;
-  }
+.author-bio-card {
+	background-color: white;
+	text-align: center;
+	background-color: $off-white-one;
+	height: 100%;
+	padding: 0 $desktop-side-pad 0;
+	@include flexbox;
+	@include align-items(center);
+	@include flex-direction(column);
+	
+}
 
-  .author-role {
-    max-width: 380px;
-    padding: 20px;
-    display: inline-block;
-    background-color: white;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    height: 100%;
 
-    .avatar {
-      position: initial;
-      float: left;
-      width: 50px;
-    }
+.author-bio-image {
+	display: inline-block;
+	top: -10px;
+	position: relative;
+	@include vendor(border-radius, 50%);
+	
+}
 
-    .text {
-      display: inline-block;
-      max-width: 280px;
-      float: left;
-      padding-left: 20px;
-      color: $post-meta;
+.author-bio-image .avatar {
+	width: auto;
+	height: auto;
+	left: 0;
+	right: 0;
+	@include vendor(box-shadow, 0 0 5px rgba(0, 0, 0, 0.2) );
+}
 
-      .name {
-        display: inline-block;
-        margin-bottom: 25px;
-        color: $base-black;
-      }
+.author-bio-detail {
+	@include flex(1 0 auto);
+	width: 100%;
+}
 
-      a {
-        color: $base-black;
-        text-decoration: none;
-      }
 
-      a:hover {
-        text-decoration: underline;
-      }
-    }
-  }
+.author-bio-title {
+	@include font-size(20px);
+	margin-bottom: 10px;
+}
 
+.author-bio-contact a{
+	@include font-size(15px);
+	color: $uni-grey;
+	text-decoration: none;
+}
+
+
+.author-bio-detail-copy {
+	color: $uni-blue;
+	@include mq(tablet) {
+		padding: 0 $desktop-side-pad;
+	}
+	
+}
+
+
+.author-bio-articles {
+	display: inline-block;
+	background-color: #F0F0F0;
+	text-align: center;
+	text-decoration: none;
+	padding: $desktop-side-pad/3 $desktop-side-pad/2;
+	text-transform: uppercase;
+	margin-top:  $desktop-side-pad;
+	font-weight: bold;
+	color: $uni-grey;
+	
+	@include hocus() {
+		background-color: $uni-grey;
+		color: white;
+	}
+	
 }
