--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -81,10 +81,9 @@
 
 
 .site-branding__hero-wording {
-	justify-content: center;
 
 	@include flexbox;
-	@include justify-content(flex-start);
+	@include justify-content(center);
 	@include flex-direction(column);
 
 	margin-top: $mobile-side-pad;
