--- a/site-sass/base/vars.colours.scss
+++ b/site-sass/base/vars.colours.scss
@@ -17,6 +17,8 @@ $uni-grey: 				rgba(116, 118, 120, 1)!default;
 $uni-teal: 				rgba(4, 126, 136, 1)!default;
 $uni-teal-hover: 				rgba(4, 126, 136, 0.3)!default;
 
+$link-color: #047E8B;
+
 @mixin uni-gradient {
 	background-image : -moz-linear-gradient(50% 100% 90deg,rgba(0, 33, 71, 1) 0%,rgba(1, 35, 73, 1) 42.73%,rgba(6, 41, 82, 1) 67.78%,rgba(13, 50, 96, 1) 88.2%,rgba(20, 59, 108, 1) 100%);
 	background-image : -webkit-linear-gradient(90deg, rgba(0, 33, 71, 1) 0%, rgba(1, 35, 73, 1) 42.73%, rgba(6, 41, 82, 1) 67.78%, rgba(13, 50, 96, 1) 88.2%, rgba(20, 59, 108, 1) 100%);
