--- a/site-sass/site-specific/site.post.scss
+++ b/site-sass/site-specific/site.post.scss
@@ -184,6 +184,8 @@ blockquote::before, blockquote::after {
 
 
 .hentry,.post {
+	@include vendor(border-radius, $small-border-radius);
+ 	@include vendor(box-shadow, 0 0 5px rgba(0, 0, 0, 0.2) );
  	background-color: white;
 }
 
@@ -752,18 +754,15 @@ blockquote::before, blockquote::after {
 
 
 .post-content a {
-	color: $link-color;
+	color: inherit;
+	border-bottom: 1px solid $base-black;
 	text-decoration: none;
 	padding-bottom: 5px;
 
 	@include hocus() {
-			border-bottom: 1px solid $link-color;
+		border-bottom-color: #928452;
 	}
 
-}
-
-.post-content img {
-	padding: 30px;
 }
 
 
