Fix header slider mobile bits.

--- a/site-sass/components/widgets.scss
+++ b/site-sass/components/widgets.scss
@@ -22,6 +22,15 @@ $widget-sub-title: tribe-event-title;
 	}
 }
 
+.widgets ul,
+.widgets li,
+.widgets ol,
+.widgets li{
+	
+	margin-left: 10px;
+
+}
+
 .widget,
 .widgets,
 .widget h2,
