--- a/site-sass/components/slick.scss
+++ b/site-sass/components/slick.scss
@@ -76,6 +76,9 @@
     }
     img {
         display: inline-block;
+		width: 100%;
+		height: 100%;
+		object-fit:fill;
     }
     &.slick-loading img {
         display: none;
